@@ -1,0 +1,27 @@
+<?xml version="1.0"?>
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="contextInsensitive" VALUE="true" />
+		<PROPERTY NAME="lineComment" VALUE="#" />
+	</PROPS>
+	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE" DIGIT_RE="\d+">
+		<EOL_SPAN TYPE="COMMENT2">#</EOL_SPAN>
+		<SEQ TYPE="OPERATOR">[</SEQ>
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<SEQ TYPE="OPERATOR">]</SEQ>
+		<SEQ TYPE="OPERATOR">.</SEQ>
+		<SEQ TYPE="OPERATOR">:</SEQ>
+	<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+		<EOL_SPAN TYPE="KEYWORD1" DELEGATE="shellscript::MAIN">RUN</EOL_SPAN>
+		<KEYWORDS>
+			<KEYWORD1>FROM</KEYWORD1>
+			<KEYWORD1>WORKDIR</KEYWORD1>
+			<KEYWORD1>COPY</KEYWORD1>
+			<KEYWORD1>CMD</KEYWORD1>
+		</KEYWORDS>
+	</RULES>
+</MODE>
